--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 
   <div class = "container">
-      <iframe src = "http://178.128.66.134:2199/start/hirasweets/"></iframe>
+        <iframe height="300px" width="100%" src="http://178.128.66.134:2199/start/hirasweets/" name="iframe_a">
+        </iframe>
   </div>
 </body>
 </html>
