--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
   <div class = "container">
-        <iframe height="300px" width="100%" src="https://www.google.com/search?q=%http://178.128.66.134:2199/start/hirasweets/" name="iframe_a">
+        <iframe height="300px" width="100%" src="https://www.google.com/search?q=%http://178.128.66.134:2199/start/hirasweets/">
         </iframe>
   </div>
 </body>
