update the js files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 <head>
 	<title>Momentum Test</title>
 
@@ -10,5 +10,90 @@
         <iframe height="300px" width="100%" src="https://www.google.com/search?q=%http://178.128.66.134:2199/start/hirasweets/">
         </iframe>
   </div>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+	<title></title>
+	
+	<script language="javascript" type="text/javascript" src="/system/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../../theme/startpage.css" />
+</head>
+<body>
+
+<div id="header">
+	<div id="logo">
+		<h1>HIRA SWEETS RADIO</h1>
+		<h2>128 Kbps stream</h2>
+	</div>
+</div>
+
+
+<div id="topbar">
+	<div id="nowplaying">
+				<div id="cc_tunein">
+	<a href="http://178.128.66.134:2199/tunein/hirasweets-stream.pls"><img align="absmiddle" src="http://178.128.66.134:2199/system/images/tunein-pls.png" border="0" alt="Winamp, iTunes" title="Winamp, iTunes" /></a>
+	<a href="http://178.128.66.134:2199/tunein/hirasweets-stream.asx"><img align="absmiddle" src="http://178.128.66.134:2199/system/images/tunein-asx.png" border="0" alt="Windows Media Player" title="Windows Media Player" /></a>
+	<a href="http://178.128.66.134:2199/tunein/hirasweets-stream.ram"><img align="absmiddle" src="http://178.128.66.134:2199/system/images/tunein-ram.png" border="0" alt="Real Player" title="Real Player" /></a>
+	<a href="http://178.128.66.134:2199/tunein/hirasweets-stream.qtl"><img align="absmiddle" src="http://178.128.66.134:2199/system/images/tunein-qtl.png" border="0" alt="QuickTime" title="QuickTime" /></a>
+</div>
+
+
+		<div style="white-space: nowrap; overflow: hidden; margin-right: 8px">
+			Now playing: <a href="/tunein/hirasweets.pls" id="cc_strinfo_summary_hirasweets" class="cc_streaminfo" style="text-overflow: ellipsis">Loading...</a> (<span id="cc_strinfo_server_hirasweets" class="cc_streaminfo"></span>)<br />
+		</div>
+		<script language="javascript" type="text/javascript" src="/system/streaminfo.js"></script>
+
+	</div>
+</div>
+
+
+<div id="container">
+	
+	<div id="leftnav">
+				
+		<h3>Recent Tracks</h3>
+		
+		<div id="cc_recenttracks_hirasweets" class="cc_recenttracks_list">Loading...</div>
+		
+		<script language="javascript" type="text/javascript" src="/system/recenttracks.js"></script>
+		
+	</div>
+	
+	
+	<div id="content">
+				<h3>Web Audio Player</h3>
+
+		<div class="block">
+			<div class="content" style="text-align: center; margin: 0 auto 0 auto">
+
+				<div class="cc_player" data-username="hirasweets" data-charset="" data-skin="blue.monday.startpage">Loading ...</div>
+
+			</div>
+		</div>
+		<script language="javascript" type="text/javascript" src="/system/player.js"></script>
+
+		
+	
+		
+		<h3>On-demand Content</h3>
+	
+		<div class="block">
+			<div class="content">
+				<div id="cc_ondemand_hirasweets" class="cc_ondemand_content">Loading...</div>
+			</div>
+		</div>
+		<script language="javascript" type="text/javascript" src="/system/ondemand.js"></script>
+		
+		
+		
+
+	</div>
+	
+</div>
+
 </body>
 </html>
