--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="margin: 0%">
 
   <div class = "container">
-        <iframe height="100%" width="100%" src="http://178.128.66.134:2199/start/hirasweets/">
+        <iframe height="100%" width="100%" src="https://tranquil-escarpment-90602.herokuapp.com/http://178.128.66.134:2199/start/hirasweets/">
         </iframe>
   </div>
 </body>
